@@ -1,5 +1,8 @@
+--enable-preview
 --enable-native-access=ALL-UNNAMED
 --sun-misc-unsafe-memory-access=allow
+-XX:+UnlockExperimentalVMOptions
+-XX:+UseCompactObjectHeaders
 -Xms2g
 -Xmx4g
 -XX:+UseG1GC
